GNOME Bugzilla – Bug 709687
listbox: Fix keynav_failed() parameter in move_cursor()
Last modified: 2013-10-11 12:19:31 UTC
See patch.
Created attachment 256771 [details] [review] listbox: Fix keynav_failed() parameter in move_cursor() The 'direction' parameter to gtk_widget_keynav_failed() is based on gtk_list_box_move_cursor()'s 'count' parameter. However if the passed in movement is GTK_MOVEMENT_DISPLAY_LINES, 'count' is modified by the keynav handling and will always be 0. To avoid messing up the 'direction' parameter, use a local variable for keynav handling and leave 'count' untouched.
Review of attachment 256771 [details] [review]: ack
Attachment 256771 [details] pushed as dd85acb - listbox: Fix keynav_failed() parameter in move_cursor() Ugh, git-bz failure ...